--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "pinia": "^2.0.21",
+    "tdesign-vue-next": "^0.22.1",
     "vue": "^3.2.38"
   },
   "devDependencies": {
