--- a/dataplus-ui-backstage/pom.xml
+++ b/dataplus-ui-backstage/pom.xml
@@ -12,4 +12,38 @@
     <artifactId>dataplus-ui-backstage</artifactId>
     <packaging>pom</packaging>
 
+    <dependencies>
+        <!-- GWT Boot -->
+        <dependency>
+            <groupId>com.github.gwtboot</groupId>
+            <artifactId>gwt-boot-starter</artifactId>
+        </dependency>
+
+        <!-- Domino UI -->
+        <dependency>
+            <groupId>org.dominokit</groupId>
+            <artifactId>domino-ui</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.dominokit</groupId>
+            <artifactId>domino-ui</artifactId>
+            <classifier>sources</classifier>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>net.ltgt.gwt.maven</groupId>
+                <artifactId>gwt-maven-plugin</artifactId>
+                <configuration>
+                    <moduleName>com.neweasesoft.dataplus.ui.backstage.client.ApplicationEntryPoint</moduleName>
+                    <startupUrls>
+                        <url>/backstage/</url>
+                    </startupUrls>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
